--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
+    "gsap-trial": "^3.12.2",
     "three": "^0.157.0"
   }
 }
